--- a/processor/sumologicprocessor/metadata.yaml
+++ b/processor/sumologicprocessor/metadata.yaml
@@ -4,6 +4,6 @@ status:
   class: processor
   stability:
     beta: [traces, metrics, logs]
-  distributions: [sumo]
+  distributions: [contrib, sumo]
   codeowners:
     active: [aboguszewski-sumo, astencel-sumo, sumo-drosiek]
