--- a/renovate.json
+++ b/renovate.json
@@ -34,6 +34,11 @@
       },
       {
         "matchManagers": ["gomod"],
+        "matchSourceUrlPrefixes": ["https://go.opentelemetry.io/collector"],
+        "groupName": "All OpenTelemetry Collector packages"
+      },
+      {
+        "matchManagers": ["gomod"],
         "matchSourceUrlPrefixes": ["https://github.com/aws"],
         "groupName": "All github.com/aws packages"
       },
