[chore] revert make update-otel (#29537)
This is to unblock the release, will work on bringing it back after the
release.

Signed-off-by: Alex Boten <aboten@lightstep.com>

--- a/Makefile.Common
+++ b/Makefile.Common
@@ -203,3 +203,8 @@ moddownload:
 gci: $(TOOLS_BIN_DIR)/gci
 	@echo "running $(GCI)"
 	@$(GCI) write -s standard -s default -s "prefix(github.com/open-telemetry/opentelemetry-collector-contrib)" $(ALL_SRC_AND_DOC)
+
+.PHONY: updatedep
+updatedep:
+	$(PWD)/internal/buildscripts/update-dep
+	@$(MAKE) tidy
