--- a/processor/resourcedetectionprocessor/internal/system/internal/metadata/testdata/config.yaml
+++ b/processor/resourcedetectionprocessor/internal/system/internal/metadata/testdata/config.yaml
@@ -17,6 +17,8 @@ all_set:
       enabled: true
     host.id:
       enabled: true
+    host.ip:
+      enabled: true
     host.name:
       enabled: true
     os.description:
@@ -40,6 +42,8 @@ none_set:
     host.cpu.vendor.id:
       enabled: false
     host.id:
+      enabled: false
+    host.ip:
       enabled: false
     host.name:
       enabled: false
