--- a/.github/workflows/build-and-test-windows.yml
+++ b/.github/workflows/build-and-test-windows.yml
@@ -60,6 +60,9 @@ jobs:
             ~\go\pkg\mod
             ~\AppData\Local\go-build
           key: go-build-cache-${{ runner.os }}-${{ matrix.group }}-go-${{ hashFiles('**/go.sum') }}
+      - if: matrix.group == 'cmd'
+        name: Increasing GOTEST_TIMEOUT for group 'cmd'
+        run: echo "GOTEST_TIMEOUT=1200s" >> $Env:GITHUB_ENV
       - name: Run Unit tests
         run: make -j2 gotest GROUP=${{ matrix.group }}
   windows-unittest:
