--- a/renovate.json
+++ b/renovate.json
@@ -63,6 +63,7 @@
       }
     ],
     "ignoreDeps": [
-      "github.com/mattn/go-ieproxy"
+      "github.com/mattn/go-ieproxy",
+      "github.com/DataDog/datadog-agent/pkg/trace/exportable"
     ]
   }
