[connector/spanmetrics] Fix memory leak (#28847)
# Why

The `spanmetrics` connector has a memory leak that occurs when the
cumulative temporality is used. The `connectorImp#resourceMetrics` map
is only ever cleaned up in delta temporality.

# What

Turn `connectorImp#resourceMetrics` into a LRU cache with a maximum
size. To correctly handle metric resets we also introduce a start
timestamp per `resourceMetric` instance.

# References

Fixes
https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/27654

Co-authored-by: Jared Tan <jian.tan@daocloud.io>

--- a/connector/spanmetricsconnector/testdata/config.yaml
+++ b/connector/spanmetricsconnector/testdata/config.yaml
@@ -15,6 +15,7 @@ spanmetrics/full:
   exemplars:
     enabled: true
   dimensions_cache_size: 1500
+  resource_metrics_cache_size: 1600
 
   # Additional list of dimensions on top of:
   # - service.name
