[chore] group collector digest updates (#29674)
Signed-off-by: Alex Boten <aboten@lightstep.com>
Co-authored-by: Tyler Helmuth <12352919+TylerHelmuth@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -35,6 +35,12 @@
       {
         "matchManagers": ["gomod"],
         "matchSourceUrlPrefixes": ["https://go.opentelemetry.io/collector"],
+        "groupName": "All OpenTelemetry Collector dev packages",
+        "matchUpdateTypes": ["digest"]
+      },
+      {
+        "matchManagers": ["gomod"],
+        "matchSourceUrlPrefixes": ["https://go.opentelemetry.io/collector"],
         "groupName": "All OpenTelemetry Collector packages"
       },
       {
