[chore] Added Jeremy Hicks (greatestusername) to codeowner list (#29450)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -256,7 +256,7 @@ receiver/skywalkingreceiver/                                            @open-te
 receiver/snmpreceiver/                                                  @open-telemetry/collector-contrib-approvers @djaglowski @StefanKurek @tamir-michaeli
 receiver/snowflakereceiver/                                             @open-telemetry/collector-contrib-approvers @dmitryax @shalper2
 receiver/solacereceiver/                                                @open-telemetry/collector-contrib-approvers @djaglowski @mcardy
-receiver/splunkenterprisereceiver/                                      @open-telemetry/collector-contrib-approvers @shalper2 @MovieStoreGuy
+receiver/splunkenterprisereceiver/                                      @open-telemetry/collector-contrib-approvers @shalper2 @MovieStoreGuy @greatestusername
 receiver/splunkhecreceiver/                                             @open-telemetry/collector-contrib-approvers @atoulme
 receiver/sqlqueryreceiver/                                              @open-telemetry/collector-contrib-approvers @dmitryax @pmcollins
 receiver/sqlserverreceiver/                                             @open-telemetry/collector-contrib-approvers @djaglowski @StefanKurek
