--- a/receiver/splunkenterprisereceiver/metadata.yaml
+++ b/receiver/splunkenterprisereceiver/metadata.yaml
@@ -6,7 +6,7 @@ status:
     development: [metrics]
   distributions:
   codeowners:
-    active: [shalper2, MovieStoreGuy]
+    active: [shalper2, MovieStoreGuy, greatestusername]
 
 attributes:
   splunk.index.name:
