[processor/resourcedetection] Add host.mac to system detector (#29588)
**Description:**

Adds support for `host.mac` detection to the `system` detector on the
resource detection processor.

This convention is defined in the specification [on the host
document](https://github.com/open-telemetry/semantic-conventions/blob/v1.23.1/docs/resource/host.md).

**Link to tracking Issue:** Fixes #29587 and therefore fixes #22045

**Testing:** 

Unit tests; manually Tested on my laptop with the following
configuration:

```
receivers:
  hostmetrics:
    collection_interval: 10s
    scrapers:
      load:

processors:
  resourcedetection:
    detectors: ["system"]
    system:
      resource_attributes:
        host.mac:
          enabled: true

exporters:
  debug:
    verbosity: detailed

service:
  pipelines:
    metrics:
      receivers: [hostmetrics]
      processors: [resourcedetection]
      exporters: [debug]
```

---------

Co-authored-by: Curtis Robert <crobert@splunk.com>

--- a/processor/resourcedetectionprocessor/internal/system/internal/metadata/testdata/config.yaml
+++ b/processor/resourcedetectionprocessor/internal/system/internal/metadata/testdata/config.yaml
@@ -19,6 +19,8 @@ all_set:
       enabled: true
     host.ip:
       enabled: true
+    host.mac:
+      enabled: true
     host.name:
       enabled: true
     os.description:
@@ -44,6 +46,8 @@ none_set:
     host.id:
       enabled: false
     host.ip:
+      enabled: false
+    host.mac:
       enabled: false
     host.name:
       enabled: false
