[chore] move awss3 to be tested with a generated test (#29735)
This change is part of
https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/27849

--- a/exporter/awss3exporter/metadata.yaml
+++ b/exporter/awss3exporter/metadata.yaml
@@ -7,3 +7,6 @@ status:
   distributions: [contrib, observiq, sumo]
   codeowners:
     active: [atoulme, pdelewski]
+tests:
+  config:
+  expect_consumer_error: true
