[chore] only use renovate for patch/minor updates (#29783)
Signed-off-by: Alex Boten <aboten@lightstep.com>

--- a/renovate.json
+++ b/renovate.json
@@ -65,7 +65,7 @@
       },
       {
         "matchManagers": ["gomod"],
-        "matchUpdateTypes": ["minor", "major"]
+        "matchUpdateTypes": ["minor", "patch"]
       }
     ],
     "ignoreDeps": [
