[k8sclusterreceiver] deprecate k8s.kubeproxy.version resource attribute (#29768)
**Description:** <Describe what has changed.>
<!--Ex. Fixing a bug - Describe the bug and how this fixes the issue.
Ex. Adding a feature - Explain what this achieves.-->

Deprecating k8s.kubeproxy.version resource attribute 


**Link to tracking Issue:** <Issue number if applicable>


https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/29748

**Testing:** <Describe what testing was performed and which tests were
added.>

**Documentation:** <Describe the documentation added.>

--- a/receiver/k8sclusterreceiver/metadata.yaml
+++ b/receiver/k8sclusterreceiver/metadata.yaml
@@ -166,6 +166,8 @@ resource_attributes:
     description: The version of Kube Proxy running on the node.
     type: string
     enabled: false
+    warnings:
+      if_configured: k8s.kubeproxy.version resource attribute is deprecated and will be removed soon.
 
   openshift.clusterquota.uid:
     description: The k8s ClusterResourceQuota uid.
