--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -207,6 +207,10 @@ jobs:
         run: |
           make genoteltestbedcol
           git diff -s --exit-code || (echo 'Generated code is out of date, please run "make genoteltestbedcol" and commit the changes in this PR.' && exit 1)
+      - name: Gen distributions
+        run: |
+          make gendistributions
+          git diff -s --exit-code || (echo 'Generated code is out of date, please run "make gendistributions" and commit the changes in this PR.' && exit 1)
       - name: CodeGen
         run: |
           make -j2 generate
