--- a/.github/workflows/tidy-dependencies.yml
+++ b/.github/workflows/tidy-dependencies.yml
@@ -14,7 +14,7 @@ jobs:
   setup-environment:
     timeout-minutes: 30
     runs-on: ubuntu-latest
-    if: ${{ contains(github.event.pull_request.labels.*.name, 'renovatebot') }}
+    if: ${{ github.actor == 'renovate[bot]' || contains(github.event.pull_request.labels.*.name, 'renovatebot') }}
     steps:
       - uses: actions/checkout@v4
         with:
