--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -105,7 +105,7 @@ jobs:
       - name: Lint
         run: make -j2 golint GROUP=${{ matrix.group }}
   lint:
-    if: ${{ github.actor != 'dependabot[bot]' && always() }}
+    if: ${{ github.actor != 'dependabot[bot]' && github.actor != 'renovate[bot]' && always() }}
     runs-on: ubuntu-latest
     needs: [setup-environment, lint-matrix]
     steps:
@@ -276,7 +276,7 @@ jobs:
           name: coverage-artifacts
           path: ${{ matrix.group }}-coverage.txt
   unittest:
-    if: ${{ github.actor != 'dependabot[bot]' && always() }}
+    if: ${{ github.actor != 'dependabot[bot]' && github.actor != 'renovate[bot]' && always() }}
     runs-on: ubuntu-latest
     needs: [setup-environment, unittest-matrix]
     steps:
