--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -282,7 +282,7 @@ reports/distributions/aws.yaml      @open-telemetry/collector-contrib-approvers
 reports/distributions/grafana.yaml  @open-telemetry/collector-contrib-approvers 
 reports/distributions/observiq.yaml @open-telemetry/collector-contrib-approvers 
 reports/distributions/redhat.yaml   @open-telemetry/collector-contrib-approvers 
-reports/distributions/splunk.yaml   @open-telemetry/collector-contrib-approvers atoulme dmitryax hughesjj rfitzpatrick
+reports/distributions/splunk.yaml   @open-telemetry/collector-contrib-approvers @atoulme @crobert-1 @dmitryax @hughesjj @jeffreyc-splunk @jinja2 @jvoravong @panotti @rmfitzpatrick @samiura
 reports/distributions/sumo.yaml     @open-telemetry/collector-contrib-approvers 
 reports/distributions/liatrio.yaml  @open-telemetry/collector-contrib-approvers 
 
