[chore] add aws s3 exporter to splunk distribution (#30282)

--- a/exporter/awss3exporter/metadata.yaml
+++ b/exporter/awss3exporter/metadata.yaml
@@ -4,7 +4,7 @@ status:
   class: exporter
   stability:
     alpha: [traces, metrics, logs]
-  distributions: [contrib, observiq, sumo]
+  distributions: [contrib, observiq, sumo, splunk]
   codeowners:
     active: [atoulme, pdelewski]
 tests:
