--- a/reports/distributions/splunk.yaml
+++ b/reports/distributions/splunk.yaml
@@ -15,6 +15,7 @@ components:
     connector:
         - spanmetrics
     exporter:
+        - awss3
         - file
         - kafka
         - loadbalancing
