--- a/receiver/cloudfoundryreceiver/metadata.yaml
+++ b/receiver/cloudfoundryreceiver/metadata.yaml
@@ -6,7 +6,8 @@ status:
     beta: [metrics]
   distributions: [contrib, splunk, observiq, sumo]
   codeowners:
-    active: [agoallikmaa, pellared, crobert-1]
+    active: [pellared, crobert-1]
+    emeritus: [agoallikmaa]
 
 tests:
   config:
