--- a/receiver/hostmetricsreceiver/internal/scraper/memoryscraper/internal/metadata/testdata/config.yaml
+++ b/receiver/hostmetricsreceiver/internal/scraper/memoryscraper/internal/metadata/testdata/config.yaml
@@ -3,6 +3,8 @@ all_set:
   metrics:
     system.linux.memory.available:
       enabled: true
+    system.memory.limit:
+      enabled: true
     system.memory.usage:
       enabled: true
     system.memory.utilization:
@@ -10,6 +12,8 @@ all_set:
 none_set:
   metrics:
     system.linux.memory.available:
+      enabled: false
+    system.memory.limit:
       enabled: false
     system.memory.usage:
       enabled: false
