[chore][exporter/skywalking] remove codeowner (#30294)
**Description:**
Move @liqiangz  to emeritus codeowner.

**Link to tracking Issue:**
Fixes #23397

NOTE: This removes the last active codeowner of the skywalking exporter.
If this is merged, a follow up PR will be filed to move this component
to `unmaintained` stage, and eventually deprecation and removal.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -74,7 +74,7 @@ exporter/pulsarexporter/                                 @open-telemetry/collect
 exporter/sapmexporter/                                   @open-telemetry/collector-contrib-approvers @dmitryax @atoulme
 exporter/sentryexporter/                                 @open-telemetry/collector-contrib-approvers @AbhiPrasad
 exporter/signalfxexporter/                               @open-telemetry/collector-contrib-approvers @dmitryax @crobert-1
-exporter/skywalkingexporter/                             @open-telemetry/collector-contrib-approvers @liqiangz
+exporter/skywalkingexporter/                             @open-telemetry/collector-contrib-approvers
 exporter/splunkhecexporter/                              @open-telemetry/collector-contrib-approvers @atoulme @dmitryax
 exporter/sumologicexporter/                              @open-telemetry/collector-contrib-approvers @sumo-drosiek
 exporter/syslogexporter/                                 @open-telemetry/collector-contrib-approvers @kkujawa-sumo @rnishtala-sumo @astencel-sumo
