--- a/extension/basicauthextension/metadata.yaml
+++ b/extension/basicauthextension/metadata.yaml
@@ -13,4 +13,5 @@ status:
   - splunk
   - sumo
   codeowners:
-    active: [jpkrohling, svrakitin, frzifus]
+    active: [jpkrohling, frzifus]
+    emeritus: [svrakitin]
