--- a/internal/buildscripts/packaging/fpm/deb/Dockerfile.test
+++ b/internal/buildscripts/packaging/fpm/deb/Dockerfile.test
@@ -9,14 +9,6 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update ; \
     apt-get install -y systemd systemd-sysv procps; \
     apt-get clean ; \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* ; \
-    rm -rf /lib/systemd/system/multi-user.target.wants/* ; \
-    rm -rf /etc/systemd/system/*.wants/* ; \
-    rm -rf /lib/systemd/system/local-fs.target.wants/* ; \
-    rm -rf /lib/systemd/system/sockets.target.wants/*udev* ; \
-    rm -rf /lib/systemd/system/sockets.target.wants/*initctl* ; \
-    rm -rf /lib/systemd/system/sysinit.target.wants/systemd-tmpfiles-setup* ; \
-    rm -rf /lib/systemd/system/systemd-update-utmp*
+    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-VOLUME [ "/sys/fs/cgroup" ]
 CMD ["/lib/systemd/systemd"]
