--- a/processor/k8sattributesprocessor/metadata.yaml
+++ b/processor/k8sattributesprocessor/metadata.yaml
@@ -97,3 +97,6 @@ resource_attributes:
     description: Container image tag. Requires container.id or k8s.container.name.
     type: string
     enabled: true
+
+tests:
+  config:
