--- a/exporter/opensearchexporter/metadata.yaml
+++ b/exporter/opensearchexporter/metadata.yaml
@@ -5,5 +5,6 @@ status:
   stability:
     alpha: [traces]
     development: [logs]
+  distributions: [contrib]
   codeowners:
     active: [Aneurysm9, MitchellGale, MaxKsyunz, YANG-DB]
