[receiver/osqueryreceiver] Add osquery receiver skeleton (#30458)
This change adds the skeleton for the
[osquery](https://osquery.io/) receiver, a new log receiver that pulls
structured system data from the [osquery
daemon](https://github.com/osquery/osquery).

**Link to tracking Issue:** #30375

**Testing:** Skeleton unit tests added.

**Documentation:** See README.md in receiver folder. For osquery
documentation, see [here](https://osquery.readthedocs.io/en/stable/).

--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -219,6 +219,7 @@ body:
       - receiver/nsxt
       - receiver/opencensus
       - receiver/oracledb
+      - receiver/osquery
       - receiver/otlpjsonfile
       - receiver/podman
       - receiver/postgresql
