--- a/.chloggen/k8scluster_fix-resource-attributes.yaml
+++ b/.chloggen/k8scluster_fix-resource-attributes.yaml
@@ -7,7 +7,7 @@ change_type: enhancement
 component: k8sclusterreceiver
 
 # A brief description of the change.  Surround your text with quotes ("") if it needs to start with a backtick (`).
-note: "add new disabled os.description, k8s.container_runtime.version resource attributes" 
+note: "add os.type resource attribute"
 
 # Mandatory: One or more tracking issues related to the change. You can use the PR number here if no issue exists.
 issues: [30342]
