[chore] move dataset exporter to generated lifecycle tests (#30520)
Relates to
https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/27849

--- a/exporter/datasetexporter/metadata.yaml
+++ b/exporter/datasetexporter/metadata.yaml
@@ -7,3 +7,9 @@ status:
   distributions: [contrib]
   codeowners:
     active: [atoulme, martin-majlis-s1, zdaratom, tomaz-s1]
+
+tests:
+  config:
+    dataset_url: https://app.scalyr.com
+    api_key: key-minimal
+  skip_lifecycle: true
