Update zdaratom codeowner since nick has changed (#30639)
Description: Update zdaratom codeowner for datasetexporter since nick
has changed
Link to tracking Issue:
https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/20660
Testing: NA
Documentation: NA

---------

Co-authored-by: Alex Boten <aboten@lightstep.com>

--- a/exporter/datasetexporter/metadata.yaml
+++ b/exporter/datasetexporter/metadata.yaml
@@ -6,7 +6,7 @@ status:
     alpha: [logs, traces]
   distributions: [contrib]
   codeowners:
-    active: [atoulme, martin-majlis-s1, zdaratom, tomaz-s1]
+    active: [atoulme, martin-majlis-s1, zdaratom-s1, tomaz-s1]
 
 tests:
   config:
