[extension/solarwindsapmsettingsextension] Overall structure of the new component  (#30153)
**Description:** 
- Adding the overall structure of the new component
`extension/solarwindsapmsettingsextension` for the first PR

**Link to tracking Issue:** [27668](https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/27668)

**Testing:** 
- Added config test
- Added basic factory test and extension test

**Documentation:**
- Updated the README.md

---------

Co-authored-by: Antoine Toulme <antoine@toulme.name>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -107,6 +107,7 @@ extension/opampextension/                                @open-telemetry/collect
 extension/pprofextension/                                @open-telemetry/collector-contrib-approvers @MovieStoreGuy
 extension/remotetapextension/                            @open-telemetry/collector-contrib-approvers @atoulme
 extension/sigv4authextension/                            @open-telemetry/collector-contrib-approvers @Aneurysm9 @erichsueh3
+extension/solarwindsapmsettingsextension/                @open-telemetry/collector-contrib-approvers @jerrytfleung @cheempz
 extension/storage/                                       @open-telemetry/collector-contrib-approvers @dmitryax @atoulme @djaglowski
 extension/storage/dbstorage/                             @open-telemetry/collector-contrib-approvers @dmitryax @atoulme
 extension/storage/filestorage/                           @open-telemetry/collector-contrib-approvers @djaglowski
