OpenTelemetry Protocol with Apache Arrow Exporter initial skeleton (#30619)
First PR to introduce the OpenTelemetry Protocol with
Apache Arrow exporter. From the upstream repository:
https://github.com/open-telemetry/otel-arrow/blob/main/collector/exporter/otelarrowexporter

**Link to tracking Issue:**  #26491 

This is a skeleton PR, therefore only the skeleton contains tests.
Compared with the upstream repository, the `factory_test.go` and
`config_test.go` files have been kept, the implementation tests in
`otelarrow_test.go` were excluded in this PR.

New README, [copied from the upstream
repository](https://github.com/open-telemetry/otel-arrow/blob/main/collector/exporter/otelarrowexporter/README.md).

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -68,6 +68,7 @@ body:
       - exporter/mezmo
       - exporter/opencensus
       - exporter/opensearch
+      - exporter/otelarrow
       - exporter/prometheus
       - exporter/prometheusremotewrite
       - exporter/pulsar
