--- a/reports/distributions/contrib.yaml
+++ b/reports/distributions/contrib.yaml
@@ -44,6 +44,7 @@ components:
         - mezmo
         - opencensus
         - opensearch
+        - otelarrow
         - prometheus
         - prometheusremotewrite
         - pulsar
