[processor/deltatocumulative]: initial structure (#30706)
_tracking issue:
https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/30705_

Adds basic component structure without any actual functionality as
advised by `CONTRIBUTING.md`.

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -147,6 +147,7 @@ body:
       - processor/attributes
       - processor/cumulativetodelta
       - processor/datadog
+      - processor/deltatocumulative
       - processor/deltatorate
       - processor/filter
       - processor/groupbyattrs
