--- a/.chloggen/mx-psi_internal-localhostgate.yaml
+++ b/.chloggen/mx-psi_internal-localhostgate.yaml
@@ -18,6 +18,7 @@ issues: [30702]
 subtext: | 
   This change affects the following components:
     - receiver/loki
+    - receiver/zipkin
 
 # If your change doesn't affect end users or the exported elements of any package,
 # you should instead start your pull request title with [chore] or use the "Skip Changelog" label.
