[chore] Remove contrib from distributions if component isn't currently released (#30838)
Follow up to #30832, all of these components include `contrib` in their
supported distributions list, but they are not actually currently
included in [releases of
`contrib`.](https://github.com/open-telemetry/opentelemetry-collector-releases/blob/main/distributions/otelcol-contrib/manifest.yaml)
I believe since they're all labelled as `development` stability, they
should not be included yet, so I'll remove from `metadata.yaml` instead
of actually adding them to the release.

Please let me know if I'm overstepping. From my understanding of
[contributing a new
component](https://github.com/open-telemetry/opentelemetry-collector-releases/blob/main/distributions/otelcol-contrib/manifest.yaml),
we shouldn't include a distribution until it's actually being released.
Happy to discuss if I'm misunderstanding something here.

--- a/connector/exceptionsconnector/metadata.yaml
+++ b/connector/exceptionsconnector/metadata.yaml
@@ -4,7 +4,7 @@ status:
   class: connector
   stability:
     development: [traces_to_metrics, traces_to_logs]
-  distributions: [contrib]
+  distributions: []
   codeowners:
     active: [jpkrohling, marctc]
 
