--- a/exporter/alertmanagerexporter/metadata.yaml
+++ b/exporter/alertmanagerexporter/metadata.yaml
@@ -4,7 +4,7 @@ status:
   class: exporter
   stability:
     development: [traces]
-  distributions: [contrib]
+  distributions: []
   codeowners:
     active: [jpkrohling, sokoide, mcube8]
 
