--- a/exporter/otelarrowexporter/metadata.yaml
+++ b/exporter/otelarrowexporter/metadata.yaml
@@ -4,6 +4,6 @@ status:
   class: exporter
   stability:
     development: [traces, metrics, logs]
-  distributions: [contrib]
+  distributions: []
   codeowners:
     active: [jmacd, moh-osman3]
