--- a/receiver/awscloudwatchmetricsreceiver/metadata.yaml
+++ b/receiver/awscloudwatchmetricsreceiver/metadata.yaml
@@ -4,7 +4,7 @@ status:
   class: receiver
   stability:
     development: [metrics]
-  distributions: [contrib]
+  distributions: []
   codeowners:
     active: [jpkrohling]
 
