--- a/receiver/saphanareceiver/metadata.yaml
+++ b/receiver/saphanareceiver/metadata.yaml
@@ -4,7 +4,7 @@ status:
   class: receiver
   stability:
     development: [metrics]
-  distributions: [contrib, observiq, sumo]
+  distributions: [observiq, sumo]
   codeowners:
     active: [dehaansa]
 
