Change biased-language term (#30851)
**Description:** <Describe what has changed.>
Replace the biased-language term `blacklist` for the unbiased
`blocklist` counterpart.

--- a/exporter/datadogexporter/examples/collector.yaml
+++ b/exporter/datadogexporter/examples/collector.yaml
@@ -304,7 +304,7 @@ exporters:
       # endpoint: https://api.datadoghq.com
 
       ## @param ignore_resources - list of strings - optional
-      ## A blacklist of regular expressions can be provided to disable certain traces based on their resource name
+      ## A blocklist of regular expressions can be provided to disable certain traces based on their resource name
       ## all entries must be surrounded by double quotes and separated by commas.
       #
       # ignore_resources: ["(GET|POST) /healthcheck"]
