[receiver/opencensus] Use `component.UseLocalHostAsDefaultHost` feature gate (#30817)
**Description:** Fixes #30816

---------

Co-authored-by: Alex Boten <aboten@lightstep.com>

--- a/.chloggen/mx-psi_internal-localhostgate.yaml
+++ b/.chloggen/mx-psi_internal-localhostgate.yaml
@@ -18,6 +18,7 @@ issues: [30702]
 subtext: | 
   This change affects the following components:
     - receiver/loki
+    - receiver/opencensus
     - receiver/zipkin
 
 # If your change doesn't affect end users or the exported elements of any package,
