[receiver/splunkhec] splunkhecreiver adopts ``component.UseLocalHostAsDefaultHost` feature gate` (#30847)
**Description:**
Add `component.UseLocalHostAsDefaultHost` feature gate that changes
default endpoints from 0.0.0.0 to localhost

**Link to tracking Issue:**
#30702

**Documentation:**
Updated docs.

Co-authored-by: Pablo Baeyens <pbaeyens31+github@gmail.com>

--- a/.chloggen/mx-psi_internal-localhostgate.yaml
+++ b/.chloggen/mx-psi_internal-localhostgate.yaml
@@ -22,6 +22,7 @@ subtext: |
     - receiver/zipkin
     - receiver/awsfirehose
     - processor/remotetap
+    - receiver/splunk_hec
 
 # If your change doesn't affect end users or the exported elements of any package,
 # you should instead start your pull request title with [chore] or use the "Skip Changelog" label.
